<fix> Change the order of users routes and add the missing /users/{id}/block route to the swagger
